--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^0.1.2
+  font_awesome_flutter: ^8.5.0
+  flutter_device_type: ^0.2.0
 
 dev_dependencies:
   flutter_test:
